--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ping Pong Chat App - Real Time Chat Application</title>
+    <!-- Script for socket.io -->
     <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
     <script defer src="public/js/client.js"></script>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <nav class="navbar">
-        <img class="nav_logo" src="public/assets/chat icon.png" alt="Logo">
-        <h1 class="title">Ping-Pong</h1>
+        <div class="logo">
+            <img class="img_logo" src="public/assets/chat icon.png" alt="Logo">
+            <h1 class="title">Ping-Pong</h1>
+        </div>
+        <div class="online-count"><i class="fa-solid fa-circle"></i><span>...</span>users online</div>
     </nav>
     <div class="container">
-        <div class="message center">Welcome to Ping-Pong Chat. You can begin the chat with people randomly now!</div>
+        <div class="message center" style="font-size: 1rem; height: 25px; margin-block: 10px;">Welcome to Ping-Pong Chat. You can begin the chat with people who are online now!</div>
     </div>
     <form action="#" id="send-container" class="send-container">
-        <input type="text" placeholder="Enter your message" name="message" id="messageInput">
+        <input type="text" placeholder="Enter your message" name="message" id="messageInput" required>
         <button class="btn" type="submit">Send</button>
     </form>
 </body>
