--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ping Pong Chat App - Real Time Chat Application</title>
     <!-- Script for socket.io -->
-    <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
+    <script defer src="https://ping-pong-chat-app.onrender.com/socket.io/socket.io.js"></script>
     <script defer src="public/js/client.js"></script>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
